--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <head>
         <meta charset="utf-8">
         <title>Etch-A-sketch</title>
-        <script src="program.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <div id="grid-container">
 
         </div>
+
+        <script src="program.js" defer></script>
     </body>
 </html>
