feat: allow grid size to scale dynamically using computed container width

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
 
     <body>
+
+        <button class="change-cells-btn">Change Number of Cells</button>
         <div id="grid-container">
 
         </div>
