✅ feat: add UI buttons for layout control

--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
     </head>
 
     <body>
-        <div id="grid-container">
+        <h1>Etch-A-sketch</h1>
+        <div id="main-container">
+
+            <div id="grid-controllers">
+                <div class="mode-options">
+                    <button>Normal Mode</button>
+                    <button>Rainbow Mode</button>
+                </div>
+                <div>
+                    <input type="range"  min="4" max="100" value="16">
+                </div>
+            </div>
+
+            <div id="grid-container">
+
+            </div>
 
         </div>
-
         <script src="program.js" ></script>
     </body>
 </html>
